the scrollbar is prevented from repositioning the page

--- a/resources/js/Meerkat.css
+++ b/resources/js/Meerkat.css
@@ -1,3 +1,7 @@
+html {
+  overflow-y: scroll;
+}
+
 .Meerkat .jumbotron {
   padding: 1.5rem;
 }
